--- a/client/views/templates/nav.html
+++ b/client/views/templates/nav.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row nav-class">
     <div class="col-md-6 col-md-offset-3 text-center">
         <ul class="nav nav-pills nav-justified">
             <li><a href="#address_display">Address Display</a></li>
